[package]
name = "tri"
version = "0.1.0"
authors = ["mental <m3nta1@yahoo.com>"]
edition = "2018"

[dependencies]
clap = "2.32.0"
lazy_static = "1.2.0"
pest = "2.1.0"
pest_derive = "2.1.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
codegen-units = 16
panic = 'abort'
incremental = false
overflow-checks = false
